# transit-data-py

./: .gitignore  README.md  pyproject.toml
src/transit_data/: __init__.py  __main__.py  gtfs.py  line.py  models.py  stop.py
src/transit_data/transit/: line.py  map_line.py  stop.py
src/transit_data/utils/: file.py  pandas.py  string.py
src/transit_data/web/: app.py  service.py
src/transit_data/web/routers/: lines.py  operators.py  stops.py  transit.py
