[project]
name = "transit-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ninest", email = "parth.kabra@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "folium>=0.17.0",
    "fastapi>=0.111.0",
    "pydantic>=2.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transit_data"]
